--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
+import Profile from '../components/Profile.astro';
 ---
 
 <Layout>
-	<h1>Gengar's Spot</h1>
+	<Profile />
 </Layout>
+
