--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,16 +1,13 @@
 ---
+import Strava from '../components/Strava.astro';
 ---
-
-<div class="strava-container">
-    <iframe height='454' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
-</div>
-
+<Strava />
 <main>
     <section>
         <h1>Jacky Choi</h1>
     </section>
 </main>
-ß
+
 <style>
     * {
         box-sizing: border-box;
@@ -20,28 +17,14 @@
         font-family: Arial, Helvetica, sans-serif
     }
     main {
-        outline: 1px solid red;
+        /* outline: 1px solid red; */
         width: 75%;
         padding: 2rem;
     }
     h1 {
-        outline: 1px solid green;
+        /* outline: 1px solid green; */
         text-align: left;
         font-size: 2rem;
         color: aliceblue;
-    }
-
-    .strava-container {
-        position: absolute;
-        right: 2rem;
-        top: 2rem;
-        padding: 0.5rem;
-        background-color: black;
-        display: inline-block;
-    }
-
-    .strava-container:hover {
-        background-color: rgb(163, 188, 21);
-        transition: 0.8s;
     }
 </style>
