--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<script src="https://kit.fontawesome.com/4bc5028724.js" crossorigin="anonymous"></script>
 		<meta name="generator" content={Astro.generator} />
 		<title>Gengar's Hideout</title>
 	</head>
