--- a/src/components/Strava.astro
+++ b/src/components/Strava.astro
@@ -3,6 +3,7 @@
 ---
 
 <section class="strava-container">
+    <!-- <iframe height='160' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/activity-summary/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe> -->
     <iframe height='454' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
 </section>
 
@@ -14,6 +15,10 @@
         padding: 0.5rem;
         background-color: black;
         display: inline-block;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        border-radius: 3px;
     }
 
     .strava-container:hover {
