refactor and resize profile

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -29,19 +29,15 @@ import Strava from '../components/Strava.astro';
         /* outline: 1px solid red; */
         display: flex;
         align-items: center;
-        width: 50%;
-        padding: 2rem;
         flex-direction: column;
-        margin: 0 auto;
         justify-content: center;
+        margin: 0 auto;
+        padding: 2rem;
+        width: 50%;
+        min-width: 370px;
     }
-    h1 {
+    h1, h2 {
         /* outline: 1px solid green; */
-        text-align: left;
-        font-size: 1rem;
-        color: aliceblue;
-    }
-    h2 {
         text-align: left;
         font-size: 1rem;
         color: aliceblue;
