make navbar skeleton

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -28,9 +28,8 @@ import Strava from '../components/Strava.astro';
     main {
         /* outline: 1px solid red; */
         display: flex;
-        align-items: center;
+        align-items: ;
         flex-direction: column;
-        justify-content: center;
         margin: 0 auto;
         padding: 2rem;
         width: 50%;
