--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Profile from '../components/Profile.astro';
+import Navigation from '../components/Navigation.astro';
 ---
 
 <Layout>
+	<Navigation />
 	<Profile />
 </Layout>
 
