--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -3,12 +3,12 @@ import Strava from '../components/Strava.astro';
 ---
 <main>
     <section class="header-container">
-        <h1>Jacky Choi</h1>
-        <h2>Penn Engineering</h2>
         <ul class="social-links">
+            <li><h1>Jacky Choi</h1></li>
             <li><a href="https://github.com/smallnumbers0" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/jackykchoi/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         </ul>
+        <h2>Penn Engineering 2027</h2>
     </section>
     <section class="summary-container">
         <p>Currently learning the art of Computer Science.</p>
@@ -92,6 +92,9 @@ import Strava from '../components/Strava.astro';
 
     .social-links a:hover {
         color: #4717b7;
+    }
+    i {
+        font-size: 1rem;
     }
 
 </style>
