--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -11,10 +11,17 @@ import Strava from '../components/Strava.astro';
         <h2>Penn Engineering 2027</h2>
     </section>
     <section class="summary-container">
-        <p>Currently learning the art of Computer Science.</p>
+        <p>Welcome! I am currently learning the art of Computer Science at the University of Pennsylvania. My passion lies in health/fitness software and data, the world of long distance running, and computational mathematics. I try to balance my time to chase my athletic pursuits along with my academic interests. You can track all my training here on <a class="strava-link" href="https://www.strava.com/athletes/33642798" target="_blank">Strava</a>.</p>
     </section>
 
-    <Strava />
+    <section class="skills-container">
+        <div class="skill-card"></div>
+        <div class="skill-card"></div>
+        <div class="skill-card"></div>
+        <div class="skill-card"></div>
+    </section>
+    <!-- <Strava /> -->
+
 </main>
 
 <style>
@@ -40,6 +47,10 @@ import Strava from '../components/Strava.astro';
         text-align: left;
         font-size: 1rem;
         color: aliceblue;
+    }
+
+    p {
+        line-height: 1.5rem;
     }
 
     .header-container {
@@ -95,6 +106,43 @@ import Strava from '../components/Strava.astro';
     }
     i {
         font-size: 1rem;
+    }
+
+    .strava-link {
+        color: rgb(226, 99, 20);
+        font-size: 1rem;
+        text-decoration: none;
+        font-weight: 700;
+    }
+
+    .strava-link:hover {
+        color: rgb(247, 69, 4);
+        transition: 0.7s;
+    }
+
+    .skills-container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+
+    }
+
+    .skill-card {
+        border: 1px solid rgb(255, 255, 255);
+        width: 100%;
+        height: 250px;
+        min-width: 370px;
+        max-width: 370px;
+        border-radius: 5px;
+        box-shadow: rgba(235, 232, 232, 0.786) 1.95px 1.95px 2.6px;
+    }
+
+    @media screen and (max-width: 1000px) {
+        .skills-container {
+            display: grid;
+            grid-template-columns: 1fr;
+        }
     }
 
 </style>
