fix skills container width

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,7 +1,9 @@
 ---
 import Strava from '../components/Strava.astro';
+import Navigation from './Navigation.astro';
 ---
 <main>
+    <Navigation />
     <section class="header-container">
         <ul class="social-links">
             <li><h1 class="title">Jacky Choi</h1></li>
@@ -102,8 +104,9 @@ import Strava from '../components/Strava.astro';
     }
 
     .social-links a:hover {
-        rgb(247, 69, 4);
+        color: rgb(226, 99, 20);
     }
+
     i {
         font-size: 1rem;
     }
@@ -123,12 +126,11 @@ import Strava from '../components/Strava.astro';
     .skills-container {
         margin: 0 auto;
         width: 100%;
-        max-width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-content: left;
         align-items: center;
-        gap: 1rem;
+        gap: 0.4rem;
 
     }
 
@@ -136,7 +138,7 @@ import Strava from '../components/Strava.astro';
         border: 1px solid rgb(255, 255, 255);
         width: 100%;
         height: 250px;
-        min-width: 370px;
+        min-width: 280px;
         max-width: 370px;
         border-radius: 5px;
         /* box-shadow: rgba(235, 232, 232, 0.786) 1.95px 1.95px 2.6px; */
@@ -150,11 +152,18 @@ import Strava from '../components/Strava.astro';
         transition: 0.7s;
     }
 
-    @media screen and (max-width: 1260px) {
+    @media screen and (max-width: 900px) {
         .skills-container {
             display: grid;
             grid-template-columns: 1fr;
         }
     }
+
+    /* @media screen and (max-width: 1200px) {
+        .skills-container {
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+    } */
 
 </style>
