--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,7 +16,7 @@
     .nav-container {
         /* outline: 1px solid blue; */
         margin: 1rem auto;
-        width: 50%;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
@@ -25,7 +25,7 @@
         list-style: none;
         text-align: left;
         min-width: 370px;
-        padding: 0 2rem;
+        padding: 0;
         gap: 1rem;
     }
 
