--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -24,7 +24,6 @@
         color: white;
         list-style: none;
         text-align: left;
-        min-width: 370px;
         padding: 0;
         gap: 1rem;
     }
@@ -44,4 +43,10 @@
         color: #4717b7;
         transition: 0.5s;
     }
+
+    /* @media screen and (max-width: 1024px) {
+        .nav-container {
+
+        }
+    } */
 </style>
