--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -32,17 +32,19 @@ import Navigation from './Navigation.astro';
         padding: 0;
         margin: 0;
         font-size: 10px;
-        font-family: Arial, Helvetica, sans-serif
+        font-family: Arial, Helvetica, sans-serif;
+        --orange-color: rgb(226, 99, 20);
     }
     main {
         /* outline: 1px solid red; */
         display: flex;
-        align-items: ;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
         margin: 0 auto;
         padding: 2rem;
         width: 50%;
-        min-width: 370px;
+        min-width: 400px;
     }
     h1, h2 {
         /* outline: 1px solid green; */
@@ -68,7 +70,7 @@ import Navigation from './Navigation.astro';
     .title {
         font-size: 1rem;
         opacity: 0.8;
-        color: rgb(226, 99, 20);;
+        color: var(--orange-color);
     }
 
     .summary-container {
@@ -104,7 +106,7 @@ import Navigation from './Navigation.astro';
     }
 
     .social-links a:hover {
-        color: rgb(226, 99, 20);
+        color: var(--orange-color);
     }
 
     i {
@@ -112,7 +114,7 @@ import Navigation from './Navigation.astro';
     }
 
     .strava-link {
-        color: rgb(226, 99, 20);
+        color: var(--orange-color);
         font-size: 1rem;
         text-decoration: none;
         font-weight: 700;
@@ -138,7 +140,7 @@ import Navigation from './Navigation.astro';
         border: 1px solid rgb(255, 255, 255);
         width: 100%;
         height: 250px;
-        min-width: 280px;
+        min-width: 300px;
         max-width: 370px;
         border-radius: 5px;
         /* box-shadow: rgba(235, 232, 232, 0.786) 1.95px 1.95px 2.6px; */
@@ -146,7 +148,7 @@ import Navigation from './Navigation.astro';
     }
 
     .skill-card:hover {
-        border: 1px solid rgb(226, 99, 20);
+        border: 1px solid var(--orange-color);
         /* box-shadow: rgb(93, 1, 254) 1.95px 1.95px 2.6px; */
         box-shadow: rgb(226, 99, 20) 0px 2px 4px, rgb(226, 99, 20) 0px 2px 4px;
         transition: 0.7s;
@@ -159,11 +161,10 @@ import Navigation from './Navigation.astro';
         }
     }
 
-    /* @media screen and (max-width: 1200px) {
-        .skills-container {
-            display: grid;
-            grid-template-columns: 1fr;
+    @media screen and (max-width: 1024px) {
+        main {
+            min-width: 800px;
         }
-    } */
+    }
 
 </style>
