make navbar responsive

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -44,9 +44,17 @@
         transition: 0.5s;
     }
 
-    /* @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 1224px) {
         .nav-container {
-
+            min-width: 555px;
         }
-    } */
+    }
+    @media screen and (max-width: 900px) {
+        .nav-container {
+            min-width: 300px;
+            display: flex;
+            justify-self: center;
+            width: 50%;
+        }
+    }
 </style>
