--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -140,7 +140,7 @@ import Navigation from './Navigation.astro';
         border: 1px solid rgb(255, 255, 255);
         width: 100%;
         height: 250px;
-        min-width: 300px;
+        min-width: 280px;
         max-width: 370px;
         border-radius: 5px;
         /* box-shadow: rgba(235, 232, 232, 0.786) 1.95px 1.95px 2.6px; */
@@ -154,16 +154,19 @@ import Navigation from './Navigation.astro';
         transition: 0.7s;
     }
 
+    @media screen and (max-width: 1024px) {
+        main {
+            min-width: 800px;
+        }
+    }
+
     @media screen and (max-width: 900px) {
         .skills-container {
             display: grid;
             grid-template-columns: 1fr;
         }
-    }
-
-    @media screen and (max-width: 1024px) {
         main {
-            min-width: 800px;
+            min-width: 370px;
         }
     }
 
