--- a/src/components/Strava.astro
+++ b/src/components/Strava.astro
@@ -1,44 +1,28 @@
 ---
 
 ---
+<main>
+    <section class="strava-container">
+        <!-- <iframe height='160' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/activity-summary/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe> -->
+        <iframe height='454' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
+    </section>
+</main>
 
-<section class="strava-container">
-    <!-- <iframe height='160' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/activity-summary/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe> -->
-    <iframe height='454' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
-</section>
 
 <style>
+    main {
+        
+    }
+
     .strava-container {
-        position: absolute;
-        right: 2rem;
-        top: 5rem;
-        padding: 0.5rem;
-        display: inline-block;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        border-radius: 3px;
+    
     }
 
     @media screen and (max-width: 1245px) {
-        .strava-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            left: 1%;
-        }
+
     }
 
     @media screen and (max-width: 480px) {
-        .strava-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            left: 1%;
-        }
+    
     }
 </style>
