--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -62,17 +62,22 @@
         box-shadow: inset 0 0 0 1px rgb(255, 98, 0);
     }
 
-    @media screen and (max-width: 1224px) {
-        .nav-container {
-            min-width: 555px;
+    @media screen and (max-width: 1240px) {
+        .navigation-container {
+            min-width: 370px;
+            margin: 0 auto;
+            width: 100%;
         }
     }
+
     @media screen and (max-width: 900px) {
-        .nav-container {
+        .navigation-container {
             min-width: 300px;
             display: flex;
-            justify-self: center;
-            width: 50%;
+            width: 100%;
+        }
+        .title {
+            text-wrap: nowrap;
         }
     }
 </style>
