--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,17 +26,16 @@ import Navigation from "../components/Navigation.astro";
         --orange-color: rgb(226, 99, 20);
     }
     main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 2rem;
-    width: 50%;
-    min-width: 400px;
-    /* Make sure content aligns consistently */
-    max-width: 1200px; /* Add a consistent max-width */
-}
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 2rem;
+        width: 50%;
+        min-width: 400px;
+        max-width: 1200px;
+    }
     .summary-container {
         width: 100%;
     }
