reroute images to show when hosted

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -18,9 +18,9 @@ import ProjectCard from './Project-Card.astro';
 
     <section class="projects-container">
         <ProjectCard title="In Progress" href="#" img="public/favicon.svg"description="SFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="public/favicon.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="public/favicon.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="public/favicon.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
     </section>
 
     <!-- <Strava /> -->
