fix images not showing

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -2,6 +2,7 @@
 import Strava from '../components/Strava.astro';
 import Navigation from './Navigation.astro';
 import ProjectCard from './Project-Card.astro';
+import favicon from './assets/favicon.svg'
 ---
 <main>
     <Navigation />
@@ -17,10 +18,10 @@ import ProjectCard from './Project-Card.astro';
     </section>
 
     <section class="projects-container">
-        <ProjectCard title="In Progress" href="#" img="public/favicon.svg"description="SFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFgSFHFGSDGHDHDFGDFg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./public/favicon.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg" ></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
     </section>
 
     <!-- <Strava /> -->
