--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -2,7 +2,7 @@
 import Strava from '../components/Strava.astro';
 import Navigation from './Navigation.astro';
 import ProjectCard from './Project-Card.astro';
-import favicon from './assets/favicon.svg'
+import favicon from './assets/favicon.svg';
 ---
 <main>
     <Navigation />
@@ -18,10 +18,10 @@ import favicon from './assets/favicon.svg'
     </section>
 
     <section class="projects-container">
-        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg" ></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="./src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
     </section>
 
     <!-- <Strava /> -->
