test images in public

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -18,10 +18,10 @@ import favicon from './assets/favicon.svg';
     </section>
 
     <section class="projects-container">
-        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/src/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
+        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
     </section>
 
     <!-- <Strava /> -->
