--- a/src/components/Project-Card.astro
+++ b/src/components/Project-Card.astro
@@ -11,7 +11,7 @@ const { title, href, description, img } = Astro.props;
 <div class="project-card">
     <a href={href}>
         <h1 class="project-title">{title}</h1>
-        <img src={img}/>
+        <img src={img} alt={title}/>
         <p>{description}</p>
     <a/>
 </div>
