--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,7 +5,7 @@
     <a class="home-button title" href="/">Jacky Choi</a>
     <div class="right-nav-container">
         <a href="/about">About</a>
-        <a href="#">Projects</a>
+        <a href="/contact">Contact</a>
         <a href="/running/Running">Running</a>
     </div>
 </div>
