--- a/src/components/Strava.astro
+++ b/src/components/Strava.astro
@@ -4,25 +4,30 @@
 <main>
     <section class="strava-container">
         <!-- <iframe height='160' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/activity-summary/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe> -->
-        <iframe height='454' width='300' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
+        <iframe height='454' width='370' allowtransparency='true' src='https://www.strava.com/athletes/33642798/latest-rides/34c15a8ae739f37db2d2c3572fbb6f3dd20ac455'></iframe>
     </section>
 </main>
 
 
 <style>
-    main {
-        
-    }
 
     .strava-container {
-    
+        
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    @media screen and (max-width: 1245px) {
-
+    @media screen and (max-width: 1024px) {
+        main {
+            min-width: 800px;
+        }
     }
 
-    @media screen and (max-width: 480px) {
-    
+    @media screen and (max-width: 900px) {
+        main {
+            min-width: 370px;
+        }
     }
 </style>
