--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -14,7 +14,7 @@ import favicon from './assets/favicon.svg';
         <h2>Penn Engineering 2027</h2>
     </section>
     <section class="summary-container">
-        <p>Welcome! I am currently learning the art of Computer Science at the University of Pennsylvania. This site showcases my journey with Computer Science. I spend most of my time in balancing my academic interests like machine learning, health sciences, and data visualization, along with my athletic pursuits as a distance runner. These experiences sparked my interest into exploring data and programming leading me to work on projects using Python, Javascript, and various Web Development tools.
+        <p>Welcome! I am currently learning the art of Computer Science at the University of Pennsylvania. This site showcases my journey with Computer Science. I spend most of my time in balancing my academic interests like machine learning, health sciences, and data visualization, along with my athletic pursuits as a distance runner. These experiences sparked my interest into exploring data and programming leading me to work on projects using Python, Javascript, and Mathematical Modeling.
     </section>
 
     <section class="projects-container">
