--- a/src/components/Project-Card.astro
+++ b/src/components/Project-Card.astro
@@ -33,8 +33,8 @@ const { title, href, description, img } = Astro.props;
 }
 
     .project-card:hover {
-        border: 1px solid var(--orange-color);
-        box-shadow: rgb(226, 99, 20) 0px 2px 4px, rgb(226, 99, 20) 0px 2px 4px;
+        border: 1px solid var(--purple-color);
+        box-shadow: var(--purple-color) 0px 2px 4px, var(--purple-color) 0px 2px 4px;
         transition: 0.7s;
     }
 
